--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Kipruto Foundation</title>
+  <meta name="description" content="Kipruto Foundation is a community-driven initiative dedicated to tackling everyday challenges through technology." />
+  <meta name="keywords" content="Kipruto Foundation, technology, community, youth, education, projects, Kenya" />
+  <meta name="author" content="Kipruto Foundation" />
 </head>
 <body>
 
